how-it-works-mobile-version arrow alignment fixes

--- a/ppa-tech-program/src/components/HowItWorks/HowItWorksMobile.css
+++ b/ppa-tech-program/src/components/HowItWorks/HowItWorksMobile.css
@@ -51,8 +51,10 @@
         top: -13.2vw !important;
         width: 7.3vw !important;
         height: 7.3vw !important;
-        right: -1vw !important;
+        right: 0vw !important;
         background: #F8FAFC !important;
+        border: 0.179vw solid #E2E8F0 !important;
+        /* left: 2.3vw !important; */
     }
     .how-it-works-mobile .slick-slider .slick-dots{
         margin-top: 2.133vw;
